# Companion

./: Companion.sln
Companion.Emulator/: App.xaml  App.xaml.cs  Companion.Emulator.csproj  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  MauiProgram.cs
Companion.OutlookConnector/: OutlookMonitor.cs  OutlookProvider.cs  UnreadEventArgs.cs
Companion.Sender.Abstractions/: IBitmap.cs
Companion.Sender.Composite/: Companion.Sender.Composite.csproj  CompositeSender.cs
Companion.Sender.Pipe/: Companion.Sender.Pipe.csproj  PipeSender.cs
Companion.Ui/: App.xaml  Companion.Ui.csproj  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  NotificationPreview.xaml  NotificationPreview.xaml.cs  WpfBitmap.cs
CompanionApp/: Companion.sln  Companion.sln.DotSettings
CompanionApp/Companion.Emulator/: MainWindow.xaml
CompanionApp/Companion.OutlookConnector/: Companion.OutlookConnector.csproj
CompanionApp/Companion.Sender.Abstractions/: Companion.Sender.Abstractions.csproj  ISender.cs
CompanionApp/Companion.Sender.Composite/: Companion.Sender.Composite.csproj  CompositeSender.cs
CompanionApp/Companion.Sender.Pipe/: PipeSender.cs
CompanionApp/Companion.Sender.Usb/: Companion.Sender.Usb.csproj  UsbSender.cs
CompanionApp/Companion.Ui/: App.xaml.cs  (+5 more)
DeviceApp/: .gitignore  CMakeLists.txt  Display.cpp  usb_descriptors.c
DeviceApp/examples/: EPD_2in9_V2_test.cpp  EPD_Test.h
DeviceApp/lib/Config/: DEV_Config.cpp  DEV_Config.h
DeviceApp/lib/e-Paper/: CMakeLists.txt  EPD_2in9_V2.cpp  display.cpp  display.h
